CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Time_Engine)

SET (TIMEENGINE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/source")
SET (TIMEENGINE_PCH_SUBDIR ${TIMEENGINE_SOURCE_DIR}/StdAfx)

SET(TIMEENGINE_SOURCE_SUBDIRS 
"StdAfx"
"TimeEntity"
"TimeManager"
"TimeObject"
"TimeVariable"
)

SET(TIMEENGINE_SOURCE_FILES "")
FOREACH(subdir ${TIMEENGINE_SOURCE_SUBDIRS})
	SET(TIMEENGINE_SOURCE_FILES ${TIMEENGINE_SOURCE_FILES} ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.cpp ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.h)
ENDFOREACH()

ADD_LIBRARY (TimeEngine
${TIMEENGINE_SOURCE_FILES}
)
FOREACH(subdir ${TIMEENGINE_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.cpp ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.h)
	MESSAGE(${TIMEENGINE_SOURCE_DIR}/${subdir}/)
ENDFOREACH()


INCLUDE_DIRECTORIES( ${TIMEENGINE_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${TIMEENGINE_PCH_SUBDIR} )
	
SET_TARGET_PROPERTIES(TimeEngine PROPERTIES LINKER_LANGUAGE C++)