CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (Time_Engine)

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( pch_support )

#SET(CMAKE_C++_CREATE_STATIC_LIBRARY 1)

SET (TIMEENGINE_SOURCE_DIR "${PROJECT_SOURCE_DIR}/source")
SET (TIMEENGINE_PCH_SUBDIR ${TIMEENGINE_SOURCE_DIR}/StdAfx)
SET (TIMEENGINE_PCH_NAME "stdafx")
SET (TIMEENGINE_PCH_HEADER ${TIMEENGINE_PCH_NAME}.h)
SET (TIMEENGINE_PCH_CPP ${TIMEENGINE_PCH_NAME}.cpp)
SET (TIMEENGINE_PCH_BIN ${TIMEENGINE_PCH_NAME}.pch)

SET(TIMEENGINE_SOURCE_SUBDIRS 
"StdAfx"
"TimeEntity"
"TimeManager"
"TimeObject"
"TimeVariable"
)

SET(TIMEENGINE_SOURCE_FILES "")
FOREACH(subdir ${TIMEENGINE_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.cpp ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.h)
	SET(TIMEENGINE_SOURCE_FILES ${TIMEENGINE_SOURCE_FILES} ${TEMP})
ENDFOREACH()

ADD_LIBRARY (TimeEngine
${TIMEENGINE_SOURCE_FILES}
)
FOREACH(subdir ${TIMEENGINE_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.cpp ${TIMEENGINE_SOURCE_DIR}/${subdir}/*.h)
	MESSAGE(${TIMEENGINE_SOURCE_DIR}/${subdir}/)
ENDFOREACH()

INCLUDE_DIRECTORIES( ${TIMEENGINE_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${TIMEENGINE_PCH_SUBDIR} )

MSVC_SET_PCH(TimeEngine
${TIMEENGINE_PCH_SUBDIR}/${TIMEENGINE_PCH_HEADER}
${TIMEENGINE_PCH_SUBDIR}/${TIMEENGINE_PCH_CPP}
)

#SET_TARGET_PROPERTIES(TimeEngine PROPERTIES LINKER_LANGUAGE C++)