CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
IF(NOT DEFINED PROJECT_NAME)
	SET(PROJECT_NAME "Time Engine")
	PROJECT(${PROJECT_NAME})
ENDIF()

LIST( APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake" )
INCLUDE( pch_support )

#SET(CMAKE_C++_CREATE_STATIC_LIBRARY 1)

IF(NOT DEFINED TE_ROOT_DIR)
	SET(TE_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF()

SET (TE_SOURCE_DIR "${TE_ROOT_DIR}/source")
SET (TE_PCH_SUBDIR ${TE_SOURCE_DIR}/StdAfx)
SET (TE_PCH_NAME "stdafx")
SET (TE_PCH_HEADER ${TE_PCH_NAME}.h)
SET (TE_PCH_CPP ${TE_PCH_NAME}.cpp)
SET (TE_PCH_BIN ${TE_PCH_NAME}.pch)

SET(TE_SOURCE_SUBDIRS 
"StdAfx"
"TimeEntity"
"TimeManager"
"TimeObject"
"TimeVariable"
)

SET(TE_SOURCE_FILES "")
FOREACH(subdir ${TE_SOURCE_SUBDIRS})
	FILE(GLOB TEMP ${TE_SOURCE_DIR}/${subdir}/*.cpp ${TE_SOURCE_DIR}/${subdir}/*.h)
	SET(TE_SOURCE_FILES ${TE_SOURCE_FILES} ${TEMP})
ENDFOREACH()

ADD_LIBRARY (TimeEngine
${TE_SOURCE_FILES}
)
FOREACH(subdir ${TE_SOURCE_SUBDIRS})
    SOURCE_GROUP(${subdir} FILES ${TE_SOURCE_DIR}/${subdir}/*.cpp ${TE_SOURCE_DIR}/${subdir}/*.h)
ENDFOREACH()

INCLUDE_DIRECTORIES( ${TE_SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${TE_PCH_SUBDIR} )

MSVC_SET_PCH(TimeEngine
${TE_PCH_SUBDIR}/${TE_PCH_HEADER}
${TE_PCH_SUBDIR}/${TE_PCH_CPP}
)

SET_TARGET_PROPERTIES(TimeEngine PROPERTIES LINKER_LANGUAGE C++)